Handle notification action events correctly
- Remove localStorage access attempt from service worker
- Update data view on focus
- Translate notifications

--- a/app/src/assets/language/es.json
+++ b/app/src/assets/language/es.json
@@ -131,6 +131,10 @@
       "healthy": "Saludable",
       "sick": "Enfermo"
     },
+    "thank_you": {
+      "title": "Successfully submitted data.",
+      "content": "Thank you for submitting!"
+    },
     "subscribe_to_notifications": "Suscribirse a las notificaciones",
     "unsubscribe_from_notifications": "Cancelar las notificationes"
   }
