--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -18,7 +18,7 @@
     "about_current_participant_count": "To this day, %{participantCount} users have used Fevermap to report their symptoms. ",
 
     "how_to_participate": "How do I participate?",
-    "participation_info": "It’s easy. You just take your temperature and feed the result – as well as a little statistical information, such as your birth year and area code – into the feed.",
+    "participation_info": "It’s easy. You just take your temperature or select how you feel and feed the result – as well as a little statistical information, such as your birth year and area code – into the feed.",
     "info_disclaimer": "We do not ask questions that could lead to you being recognized. We value your privacy and anonymity.",
 
     "how_will_my_data_be_used": "How will my data be used?",
